[build-system]
# Minimum requirements for the build system to execute.
requires = [
    # pinning setuptools https://instabase.slack.com/archives/CCY413CSU/p1724808224251339?thread_ts=1724790820.987119&cid=CCY413CSU
    "setuptools==73.0.1",
    "wheel",
    "Cython>=0.28.5, <3.0.0",
    "numpy==1.13.3; python_version=='3.6' and platform_system!='AIX' and platform_python_implementation == 'CPython'",
    "numpy==1.14.0; python_version=='3.6' and platform_system!='AIX' and platform_python_implementation != 'CPython'",
    "numpy==1.14.5; python_version=='3.7' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='3.8' and platform_system!='AIX'",
    "numpy==1.16.0; python_version=='3.6' and platform_system=='AIX'",
    "numpy==1.16.0; python_version=='3.7' and platform_system=='AIX'",
    "numpy==1.17.3; python_version=='3.8' and platform_system=='AIX'",
    "numpy==1.22.3; python_version!='3.10' or platform_system!='Windows' or platform_python_implementation=='PyPy'",
    "scipy>=0.19.1",
]
